# mpfunKokkos

./: .gitignore  CMakeLists.txt  README.md  debug_test.cpp  test_standalone.cpp
benchmarks/: CMakeLists.txt  bench_arithmetic.cpp
cmake/: mpfun-config.cmake.in
docs/: AGENT_TASKS.md  INTERFACES.md  PLAN.md  TRANSCENDENTAL_ALGORITHMS.md  TRANSCENDENTAL_TESTS.md
examples/: CMakeLists.txt  basic_usage.cpp
include/mpfun/: config.hpp  fwd.hpp  mp_float.hpp  mpfun.hpp
include/mpfun/constants/: .gitkeep
include/mpfun/core/: .gitkeep  add.hpp  compare.hpp  div.hpp  mul.hpp  representation.hpp  sqrt.hpp
include/mpfun/io/: .gitkeep
include/mpfun/transcendental/: .gitkeep  constants.hpp  exp_log.hpp  hyperbolic.hpp  transcendental.hpp  trig.hpp
tests/: CMakeLists.txt
tests/fortran_reference/: Makefile  generate_reference.f90
tests/standalone/: test_constants  test_constants.cpp  test_constants_stress.cpp  test_div  test_div.cpp  test_exp_log  test_exp_log.cpp  test_exp_log_debug  test_hyperbolic  test_hyperbolic.cpp  test_trig  test_trig.cpp  test_trig_minimal  test_trig_minimal.cpp
tests/standalone/test_exp_log_debug.dSYM/Contents/: Info.plist
tests/standalone/test_exp_log_debug.dSYM/Contents/Resources/DWARF/: test_exp_log_debug
tests/standalone/test_exp_log_debug.dSYM/Contents/Resources/Relocations/x86_64/: test_exp_log_debug.yml
tests/standalone/test_trig_minimal.dSYM/Contents/: Info.plist
tests/standalone/test_trig_minimal.dSYM/Contents/Resources/DWARF/: test_trig_minimal
tests/standalone/test_trig_minimal.dSYM/Contents/Resources/Relocations/x86_64/: test_trig_minimal.yml
tests/unit/: test_arithmetic.cpp  test_basic.cpp
tests/validation/: CMakeLists.txt  generate_test_data.py  reference_values.hpp  run_validation  run_validation.cpp  test_data_reader.hpp
